# realsense_id_ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cfg/: RealSenseIDParameters.cfg
include/realsense_id_ros/: detectionObject.h  detection_object.hpp  faceprintsDatabase.h  faceprints_database.hpp  realsense_callbacks.h  realsense_callbacks.hpp  realsense_id_ros.h  realsense_id_ros.hpp  realsense_server_callbacks.h  realsense_server_callbacks.hpp
launch/: id.launch  id.launch.py
msg/: Face.msg  FaceArray.msg  Rect.msg
params/: default.yaml  default_params.yaml
scripts/: setup_udev_rules.sh
src/: realsense_id_ros.cpp  realsense_id_ros_node.cpp
srv/: Authenticate.srv  DeviceInfo.srv  Enroll.srv  QueryUsersId.srv  RemoveAllUsers.srv  RemoveUser.srv  StartAuthenticationLoop.srv  StopAuthenticationLoop.srv
