<?xml version="1.0"?>
<package format="2">
	<name>realsense_id_ros</name>
	<version>1.4.1</version>
	<description>RealSense package allowing access to Intel ID face recognition camera.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<license>Apache 2.0</license>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>vision_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>vision_msgs</exec_depend>
	<exec_depend>cv_bridge</exec_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>dynamic_reconfigure</exec_depend>
</package>
