<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>realsense_id_ros</name>
	<version>2.2.0</version>
	<description>RealSense package allowing access to Intel ID face recognition camera.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<license>Apache 2.0</license>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>rosidl_default_generators</build_depend>
	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>vision_msgs</depend>
	<depend>cv_bridge</depend>
	<depend>nav2_util</depend>
	<depend>rsid</depend>
	<depend>face_msgs</depend>
	<member_of_group>rosidl_interface_packages</member_of_group>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
